--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.2",
+    "react-player": "^2.16.0",
     "svix": "^1.61.3",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
